[package]
name = "esp32c3_tiny_tls"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = { package = "esp32c3-hal", git = "https://github.com/esp-rs/esp-hal.git" }
riscv-rt = { version = "0.8", optional = true }

esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", features = ["esp32c3", "embedded-svc"] }
smoltcp = { version = "0.8.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.21.2", default-features = false, features = [ "alloc" ] }
log = "0.4.16"
nb = "1.0.0"
embedded-hal = "0.2"
esp-println = { git = "https://github.com/esp-rs/esp-println.git", features = [ "esp32c3" ] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace.git", features = [ "esp32c3", "panic-handler" ] }
crc = "3.0.0"
tiny-tls = { git = "https://github.com/bjoernQ/tiny-tls-rs" }
embedded-io = { version = "0.3.0", default-features = false }
rand_core = { version = "0.5", default-features = false } # 0.5.0 because of x25519-dalek

[features]
default = ["rt"]
rt = ["riscv-rt"]
